--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "projectsoft/docxtohtml.my",
+    "name": "KSOSH/docxToPdf",
     "authors": [
         {
             "name": "ProjectSoft",
